# Asteroid_Game

./: Asteroids.sln  CMakeLists.txt  README.md  vcpkg.json
Asteroids/: Asteroids.vcxproj  Asteroids.vcxproj.filters  CMakeLists.txt
Asteroids/_Interfaces/: _game_obj.cpp  _game_obj.hpp  _message.hpp
Asteroids/data/: 10_top _high_scores_file.txt  big_asteroid_data.hpp  big_enemy_ship_data.hpp  bullet_data.hpp  game_control.hpp  medium_asteroid_data.hpp  misc_data.hpp  player_ship_data.hpp  show_lives_data.hpp  small_asteroid_data.hpp  small_enemy_ship_data.hpp
Asteroids/headers/: asteroid.hpp  bullet.hpp  enemy_ship.hpp  game_control.hpp  game_over.hpp  high_score.hpp  player_ship.hpp  random_num.hpp  set_up.hpp  show_message.hpp  show_remain_lives.hpp  show_score.hpp  sounds.hpp  window.hpp
Asteroids/src/: README.txt  asteroid.cpp  bullet.cpp  enemy_ship.cpp  main.cpp  player_ship.cpp  show_remain_lives.cpp  show_score.cpp  window.cpp
Asteroids/structs/: color_obj.hpp  msg.hpp  pointd.hpp
Asteroids/superceded/: old_main.hpp
